# Nexus

./: .gitignore
.github/workflows/: rust-ci.yml
backend/api-gateway/: Dockerfile  go.mod  go.sum
backend/api-gateway/cmd/: app.go  main.go
backend/api-gateway/internal/adapters/clients/: http_auth_client.go  http_utils.go
backend/api-gateway/internal/adapters/proxy/: http_proxy.go
backend/api-gateway/internal/config/: config.go
backend/api-gateway/internal/infra/: http.go
backend/auth-service/: Dockerfile  docker-compose.yml  go.mod  go.sum
backend/auth-service/cmd/: app.go  main.go
backend/auth-service/internal/config/: config.go
backend/auth-service/internal/infra/: http.go
backend/catalog-service/: Cargo.toml  Dockerfile  docker-compose.yml
backend/catalog-service/.sqlx/: query-dc3d849ac024dac1d9762f0b2e4dec080b5af932759b53ce45e17bce28d796af.json
backend/catalog-service/internal/core/domain/: event.go
backend/catalog-service/src/: main.rs
backend/catalog-service/src/adapters/api/: handlers.rs  mod.rs  routes.rs
backend/catalog-service/src/adapters/db/: mod.rs  postgres_repo.rs
backend/catalog-service/src/domain/: event.rs
backend/catalog-service/src/ports/: event_repository.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: axios.ts  eventsService.ts
frontend/src/components/: EventCard.tsx  LoginForm.tsx  Navbar.tsx  RegisterForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/sections/: Hero.tsx
(+17 files in other folders)
