[package]
name = "catalog-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.7"

async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

uuid = { version = "1", features = ["serde", "v4"] }

dotenvy = "0.15" # Para leer el archivo .env